--- a/src/assets/sass/global/global.scss
+++ b/src/assets/sass/global/global.scss
@@ -1,5 +1,6 @@
 body{
     font-family: $sub-fonts;
+    font-weight: 400;
 }
 
 .container{
@@ -27,16 +28,57 @@ flex-direction: column;
     &:hover{
         transform: scale(1.3);
     }
-   }
+
+    @media (max-width: $tablet) {
+        transition: none;
+        &:hover{
+            transform: scale(1);
+        }
+    }
+       }
+
+       .hover-social-link {
+        display: block;
+        transition: all 0.5s;
+        &:hover {
+           transform: scale(1.3);
+        }
+        &:hover path{
+         fill: darkblue;
+         }
+       }
 
    .button{
-    padding: 8px 22px 8px 34px;
-    background: #565656;
-    max-width: 188px;
-    font-family: $sub-fonts;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: $color-dark-grey;
+    width: 188px;
+    height: 45px;
     font-weight: 700;
 font-size: 16px;
 line-height: 27px;
 letter-spacing: 0.1em;
-color: #FFFFFF;
+color: $color-white;
+
+&:hover{
+    background-color: #8b7d7d;
+}
+
+&--icon{
+    &::after{
+        content: '→';
+        font-size: 20px;
+        padding-left: 8px;
+           }
+}
+}
+
+.select{
+    font-size: 16px;
+line-height: 27px;
+letter-spacing: 0.1em;
+color: $color-dark-grey;
 }
