--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -13,6 +13,7 @@
 // Common section
 @import './common/header.scss';
 @import './common/footer.scss';
+@import './common/form.scss';
 // Common section End
 
 
@@ -21,4 +22,5 @@
 @import './pages/home.scss';
 @import './pages/about.scss';
 @import './pages/works.scss';
+@import './pages/contact.scss';
 // Pages Style End
