--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -8,6 +8,7 @@
 // Global style
 @import './global/resets.scss';
 @import './global/global.scss';
+@import './global/animation.scss';
 // Global style End
 
 // Common section
