--- a/src/assets/sass/pages/about.scss
+++ b/src/assets/sass/pages/about.scss
@@ -3,18 +3,17 @@
 
     @media (max-width: $tablet){
         padding: 64px 16px;
-    
-       
-    }
+        }
 
     &__container{
         display: flex;
-        gap: 144px;
-
+       justify-content: space-between;
+      
         @media (max-width: $tablet) {
             flex-direction: column;
-            align-items: flex-start;
             gap: 48px;
+            max-width: 288px;
+            margin: 0;
         }
     }
 
@@ -44,6 +43,7 @@ margin-bottom: 39px;
     }
 
     &__content-text{
+        max-width: 540px;
         margin-bottom: 67px;
 
         @media (max-width: $tablet){
