--- a/src/assets/sass/pages/home.scss
+++ b/src/assets/sass/pages/home.scss
@@ -20,16 +20,17 @@
   .slider {
     padding-bottom: 128px;
     display: flex;
+    justify-content: space-between;
     gap: 32px;
 
     @media (max-width: $tablet) {
       padding: 0 0 64px 16px;
+      justify-content: flex-start;
     }
 
     &__img {
       margin-bottom: 16px;
-      max-width: 544px;
-      max-height: 544px;
+      
 
       @media (max-width: $tablet) {
         width: 257px;
@@ -70,8 +71,7 @@
     }
 
     &__info-title-text {
-      color: black;
-
+     
       @media (max-width: $tablet) {
         font-size: 19px;
         line-height: 32px;
@@ -81,7 +81,7 @@
 
     &__info a {
       display: block;
-      padding-top: 48px;
+      padding-top: 28px;
     }
 
     &__info-title-text1 {
@@ -106,4 +106,78 @@
       margin-bottom: 44px;
     }
   }
+
+  .posts{
+&__container{
+  padding-bottom: 126px;
+
+  @media (max-width: $tablet){
+    padding-bottom: 64px;
+  }
 }
+
+&__title{
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 52px;
+
+  @media (max-width: $tablet){
+    flex-direction: column;
+    gap: 8px;
+    margin-bottom: 48px;
+  }
+}
+&__row{
+  display: flex;
+  justify-content: space-between;
+  gap: 34px;
+
+  @media (max-width: $tablet){
+    flex-direction: column;
+    gap: 48px;
+  }
+}
+
+&__item{
+  max-width: 350px;
+
+  @media (max-width: $tablet){
+    max-width: 288px;
+  }
+}
+
+&__img{
+    margin-bottom: 24px;
+
+  @media (max-width: $tablet){
+  margin-bottom: 16px;
+  }
+}
+
+&__description{
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 24px;
+
+  @media (max-width: $tablet){
+    flex-direction: column;
+    gap: 8px;
+  }
+}
+
+&__item-title{
+  margin-bottom: 65px;
+
+  @media (max-width: $tablet){
+    margin-bottom: 24px;
+  }
+}
+
+  &__item-title2{
+      margin-bottom: 25px;
+  }
+}
+
+  }
+  
+
