--- a/src/assets/sass/variables/_fonts.scss
+++ b/src/assets/sass/variables/_fonts.scss
@@ -23,7 +23,7 @@ line-height: 50px;
 font-size: 23px;
 line-height: 38px;
 letter-spacing: 0.1em;
-color: $color-dark-grey;
+color: $color-black;
 }
 
 .h4{
@@ -35,13 +35,22 @@ letter-spacing: 0.05em;
 color: $color-dark-grey;
 }
 
+.h5{
+font-family: $sub-fonts;
+font-weight: 400;
+font-size: 16px;
+line-height: 27px;
+letter-spacing: 0.05em;
+color: $color-dark-grey;
+}
+
 .h6{
     font-family: $sub-fonts;
     font-weight: 400;
 font-size: 16px;
 line-height: 20px;
 letter-spacing: 0.1em;
-color: $color-black;
+color: $color-dark-grey;
 }
 
 .h9{
@@ -50,5 +59,5 @@ color: $color-black;
 font-size: 12px;
 line-height: 20px;
 letter-spacing: 0.1em;
-color: $color-black;
+color: $color-grey-500;
 }
