--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -23,5 +23,10 @@
 @import './pages/home.scss';
 @import './pages/about.scss';
 @import './pages/works.scss';
+@import './pages/blog.scss';
 @import './pages/contact.scss';
+@import './pages/case-works.scss';
+
+
+
 // Pages Style End
