--- a/src/assets/sass/pages/about.scss
+++ b/src/assets/sass/pages/about.scss
@@ -2,7 +2,7 @@
     padding: 128px 0;
 
     @media (max-width: $tablet){
-        padding: 64px 16px;
+        padding: 64px 0;
         }
 
     &__container{
@@ -12,7 +12,7 @@
         @media (max-width: $tablet) {
             flex-direction: column;
             gap: 48px;
-            max-width: 288px;
+            max-width: 320px;
             margin: 0;
         }
     }
