--- a/src/assets/sass/pages/contact.scss
+++ b/src/assets/sass/pages/contact.scss
@@ -1,16 +1,16 @@
 .contact{
-    &__container{
-    padding: 123px 0 128px;
+   
+    padding: 123px 0;
 
     @media (max-width: $tablet) {
-        padding: 64px 16px;
-        max-width: 288px;
+        padding: 64px 0;
+        max-width: 320px;
         display: flex;
         flex-direction: column;
         align-items: flex-start;
         margin: 0;
     }
-}
+
 
 
 &__content{
