--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -24,9 +24,8 @@
 @import './pages/about.scss';
 @import './pages/works.scss';
 @import './pages/blog.scss';
+@import './pages/single-blog.scss';
 @import './pages/contact.scss';
 @import './pages/case-works.scss';
-
-
 
 // Pages Style End
