--- a/src/assets/sass/pages/blog.scss
+++ b/src/assets/sass/pages/blog.scss
@@ -79,15 +79,25 @@
   // section categories
 
   .categories {
+
+    @media (max-width: $tablet) {
+      max-width: 320px;
+      margin: 0;
+    }
     &__select {
       margin-bottom: 48px;
       display: flex;
       gap: 39px;
+
+      @media (max-width: $tablet) {
+        flex-direction: column;
+        gap: 29px;
+      }
     }
 
     &__select-name {
       color: $color-black;
-    }
+        }
 
     &__select-input {
       padding-bottom: 21px;
@@ -98,21 +108,88 @@
 
     &__row {
       margin-bottom: 68px;
+
+      @media (max-width: $tablet) {
+        margin-bottom: 48px;
+      }
     }
+
     &__row-cart {
       display: flex;
       gap: 38px;
+
+      @media (max-width: $tablet) {
+        flex-direction: column;
+        gap: 48px;
+      }
     }
 
     &__row-cart1 {
       margin-bottom: 126px;
+
+      @media (max-width: $tablet) {
+        margin-bottom: 48px;
+      }
+    }
+
+    &__item{
+      max-width: 541px;
+        }
+
+        &__img{
+          margin-bottom: 24px;
+
+          @media (max-width: $tablet) {
+            margin-bottom: 16px;
+          }
+        }
+        
+    &__info{
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 24px;
+
+      @media (max-width: $tablet) {
+        flex-direction: column;
+        gap: 8px;
+      }
+          }
+
+          &__title1{
+            margin-bottom: 65px;
+            
+            @media (max-width: $tablet) {
+              margin-bottom: 16px;
+            }
+          }
+
+          &__title2 {
+            margin-bottom: 24px;
+
+            @media (max-width: $tablet) {
+              margin-bottom: 16px;
+            }
+          }
+
+          &__title3{
+            margin-bottom: 24px;
+          }
+
+          &__title4{
+            margin-bottom: 59px;
+            
+            @media (max-width: $tablet) {
+              margin-bottom: 24px;
+            }
+          }
+
+    &__button {
+      display: block;
+      margin: 0 auto;
     }
   }
 
-  button {
-    display: block;
-    margin: 0 auto;
-  }
+  
 
   // section categories End
 }
