--- a/src/assets/sass/pages/single-blog.scss
+++ b/src/assets/sass/pages/single-blog.scss
@@ -7,7 +7,7 @@
   }
   // section hero
   .hero {
-    padding-bottom: 41px;
+    padding-bottom: 39px;
 
     &__info {
       margin-bottom: 24px;
@@ -50,7 +50,6 @@
 
     &__autor {
       padding-left: 200px;
-      margin-bottom: 39px;
       display: flex;
       gap: 8px;
       align-items: center;
@@ -66,10 +65,6 @@
   }
   //   section hero End
 
-  .row__container {
-    padding-left: 0;
-  }
-
   .row {
     display: flex;
 
@@ -82,7 +77,7 @@
   .social {
     max-width: 182px;
     width: 100%;
-    height: 136px;
+    height: 176px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -107,6 +102,14 @@
   // section item
   .item {
     padding-bottom: 96px;
+
+&__container{
+  padding: 0;
+
+  @media (max-width: $tablet) {
+    padding: 0 16px;
+  }
+}
 
     @media (max-width: $tablet) {
       padding-bottom: 64px;
@@ -161,12 +164,24 @@
   &__info-tag {
     color: $color-black;
   }
-}
+
 
 //   section item End
 
 // section form-blog
 .form-blog {
+
+  padding-bottom: 96px;
+
+  &__container{
+    padding: 0;
+  
+    @media (max-width: $tablet) {
+      padding: 0 16px;
+    }
+  }
+
+
   &__title {
     margin-bottom: 62px;
   }
@@ -199,6 +214,92 @@
   &__button {
     width: 109px;
   }
+
+  // section form-blog End
+
+ 
+}
+ // section comments
+ .comments{
+
+  &__container{
+    padding: 0;
+  
+    @media (max-width: $tablet) {
+      padding: 0 16px;
+    }
+  }
+
+  &__title{
+margin-bottom: 24px;
+  }
+
+&__nick-name{
+  color: $color-black;
 }
 
-// section form-blog End
+&__img{
+  width: 70px;
+  height: 70px;
+}
+
+&__item-row{
+  display: flex;
+  gap: 24px;
+}
+
+&__name{
+  display: flex;
+  gap: 24px;
+align-items: center;
+
+@media (max-width: $tablet) {
+  flex-direction: column;
+  gap: 16px;
+  align-items: flex-start;
+}
+}
+
+&__info{
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+&__item2{
+  max-width: 640px;
+  align-self: flex-end;
+
+  &::after{
+    content: '';
+    display: block;
+   height: 1px;
+   background-color: #F4F4F4;
+   width: 100%;
+   margin-top: 40px;
+  }
+
+  @media (max-width: $tablet) {
+    max-width: 194px;
+  }
+}
+
+&__text2{
+  @media (max-width: $tablet) {
+    max-width: 100px;
+    max-height: 320px;
+    overflow: hidden;
+  }
+}
+
+&__column{
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+
+}
+
+ // section comments End
+}
