--- a/src/assets/sass/pages/home.scss
+++ b/src/assets/sass/pages/home.scss
@@ -26,6 +26,8 @@
     @media (max-width: $tablet) {
       padding: 0 0 64px 16px;
       justify-content: flex-start;
+      overflow: hidden;
+      gap: 16px;
     }
 
     &__img {
