--- a/src/assets/sass/common/header.scss
+++ b/src/assets/sass/common/header.scss
@@ -1,5 +1,12 @@
 .header {
   padding-top: 96px;
+  @media (max-width: $tablet){
+    padding-top: 18px;
+    position: fixed;
+    width: 100%;
+    background: white;
+    box-shadow: -2px 17px 19px -6px rgb(0 0 0 / 75%);
+  }
 
   &__container {
     display: flex;
@@ -7,7 +14,7 @@
     align-items: center;
 
     @media (max-width: $tablet) {
-      max-width: 289px;
+      max-width: 300px;
       margin: 0;
     }
   }
@@ -20,16 +27,21 @@
       display: none;
     }
   }
-  &__nav-label {
-    display: none;
-    @media (max-width: $tablet) {
-      display: block;
-      width: 32px;
-      height: 32px;
-      position: relative;
-      z-index: 100;
-    }
+
+
+&__cross {
+  display: none;
+  @media (max-width: $tablet){
+    display: block;
+    width: 32px;
+    height: 32px;
   }
+}
+
+&__cross-close {
+  display: none;
+font-size: 27px;
+    }
 
   &__nav-link {
     font-weight: 400;
@@ -51,6 +63,8 @@
     }
   }
 
+  
+
   &__nav-input {
     display: none;
     &:checked ~ .header__nav-row {
@@ -63,7 +77,16 @@
       left: 0;
       width: 100%;
       height: 100vh;
-      z-index: 99;
+      z-index: 20;
     }
   }
-}
+
+  &__nav-input{
+    &:checked ~ .header__nav-label .header__nav-icon .header__cross-close{
+      display: block;
+      position: relative;
+      z-index: 30;
+    }
+    }
+            
+  }
