--- a/src/assets/sass/common/header.scss
+++ b/src/assets/sass/common/header.scss
@@ -14,7 +14,7 @@
     align-items: center;
 
     @media (max-width: $tablet) {
-      max-width: 300px;
+      width: 100%;
       margin: 0;
     }
   }
