--- a/src/assets/sass/pages/about.scss
+++ b/src/assets/sass/pages/about.scss
@@ -12,7 +12,8 @@
         @media (max-width: $tablet) {
             flex-direction: column;
             gap: 48px;
-            max-width: 320px;
+            max-width: 767px;
+            // width: 100%;
             margin: 0;
         }
     }
