--- a/src/assets/sass/pages/home.scss
+++ b/src/assets/sass/pages/home.scss
@@ -21,8 +21,11 @@
   .slider {
     padding-bottom: 128px;
     display: flex;
-    justify-content: space-between;
+    // justify-content: space-between;
     gap: 32px;
+
+    
+
 
     @media (max-width: $tablet) {
       padding: 0 0 64px 16px;
