--- a/src/assets/sass/pages/home.scss
+++ b/src/assets/sass/pages/home.scss
@@ -29,7 +29,7 @@
 
     @media (max-width: $tablet) {
       padding: 0 0 64px 16px;
-      justify-content: flex-start;
+      justify-content: center;
       overflow: hidden;
       gap: 16px;
     }
